--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body{
 
 header{
   background:
-  linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)),
+  linear-gradient(rgba(220, 219, 206, 0.75), rgba(0,0,0,.75)),
   url('hero.jpg') center/cover no-repeat;
 
   height:95vh;
@@ -90,7 +90,7 @@ section{
 .section-title h2{
   font-family:'Playfair Display', serif;
   font-size:2.5rem;
-  color:var(--gold);
+  color:var(--black);
   margin-bottom:10px;
 }
 
@@ -115,6 +115,8 @@ section{
   overflow:hidden;
   box-shadow:0 15px 35px rgba(0,0,0,.08);
   transition:.4s ease;
+  display: flex;
+  flex-direction: column;
 }
 
 .card:hover{
@@ -124,12 +126,11 @@ section{
 
 .card img{
   width:100%;
-  height:260px;
-  object-fit:cover;
+  height:350px;
 }
 
 .card-content{
-  padding:25px;
+  padding:10px;
   text-align:center;
 }
 
@@ -177,7 +178,7 @@ section{
 .menu .card-content{
   position:relative;
   z-index:1;
-  text-align:left;
+  text-align:center;
 }
 
 .menu .card-content h3{
@@ -193,7 +194,29 @@ section{
   font-size:1rem;
   font-weight:500;
 }
+.card-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('images/love.jpg'); /* your image */
+  background-size: cover;
+  background-position: center;
+  filter: blur(1px) brightness(0.5); /* blur + darken for text readability */
+  z-index: 1;
+}
 
+.cake-prices {
+  list-style: none; /* removes bullets */
+  padding: 0;
+  margin: 10px 0;
+}
+
+.cake-prices li {
+  margin-bottom: 5px;
+  font-weight: 500;
+}
 /* ================= PROMO ================= */
 
 .promo{
@@ -258,16 +281,21 @@ footer{
   padding:25px;
   font-size:14px;
 }
+.site-title {
+  font-family: 'Dancing Script', cursive;
+  font-size: 3rem;       /* adjust as needed */
+  color: #0d0a00;        /* golden color */
+  text-align: center;    /* center in header */
+  margin: 20px 0;
+    font-size: clamp(2rem, 8vw, 4rem);
+}
 </style>
 </head>
 
 <body>
 
 <header>
-<div class="logo-wrapper">
-  <img src="images/kmcakes.png" alt="KM Cakes Logo" class="logo">
-</div>
-
+  <div class="site-title">KMJ Cakes</div>
   <p>Dealers in Cakes, Pizza, Cookies, Cupcakes & Bento Cakes.  
      Crafted with love just for you.</p>
   <a href="#products" class="btn-primary">View Products</a>
@@ -283,7 +311,7 @@ footer{
 
   <div class="products">
     <div class="card">
-      <img src="images/cookies.jpg">
+      <img src="images/cookiee.jpg">
       <div class="card-content">
         <h3>Cookies</h3>
        <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20would%20like%20to%20order%20Cookies.%0AImage:%20https://yourwebsite.com/images/cookies.jpg"
@@ -306,7 +334,7 @@ footer{
     </div>
 
     <div class="card">
-      <img src="images/birthday.jpg">
+      <img src="images/birth.jpeg">
       <div class="card-content">
         <h3>Birthday Cakes</h3>
         <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20would%20like%20to%20order%20a%20Birthday%20Cake.%0AImage:%20https://yourwebsite.com/images/birthday.jpg"
@@ -328,9 +356,9 @@ footer{
     </div>
 
     <div class="card">
-      <img src="images/pizza.jpg">
+      <img src="images/cup.jpg">
       <div class="card-content">
-        <h3>Pizza</h3>
+        <h3>Cupcakes</h3>
         <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20would%20like%20to%20order%20a%20Pizza.%0AImage:%20https://yourwebsite.com/images/pizza.jpg"
    target="_blank">
    Order Now
@@ -360,12 +388,15 @@ footer{
   
   <div class="menu">
       <div class="card birthday">
+        <div class="card-bg"></div> 
     <div class="card-content">
       <h3>Birthday Cakes </h3>
-      <p>5" inches ---40000 </p>
-      <p>6" inches ---60000 </p>
-      <p>7" inches ---80000 </p>
-      <p>8" inches ---100000 </p>
+      <ul class="cake-prices">
+  <li>5" inches — 40,000</li>
+  <li>6" inches — 60,000</li>
+  <li>7" inches — 80,000</li>
+  <li>8" inches — 100,000</li>
+</ul>
       <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20want%20to%20order%20a%20Bento%20Cake.%0AImage:%20https://yourwebsite.com/images/bento.jpg"
    target="_blank">
    Order Now
@@ -373,11 +404,14 @@ footer{
       </div>
       </div>
         <div class="card cupcake">
+            <div class="card-bg"></div> 
         <div class="card-content">
  <h3>Cup cakes</h3>
- <p>Small Iced ---1000@</p>
- <p>Large Iced ---4000@</p>
- <p>Small Plain ---500@</p>
+ <ul class="cake-prices">
+  <li>Small Iced  — 1,000@</li>
+  <li>Large Iced  — 4,000@</li>
+  <li>Small Plain — 500@</li>
+ </ul>
  <h4>Get Free Delivery For 50 Pieces and Above</h4>
  <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20want%20to%20order%20a%20Bento%20Cake.%0AImage:%20https://yourwebsite.com/images/bento.jpg"
    target="_blank">
@@ -387,11 +421,14 @@ footer{
  </div>
  
  <div class="card pizza">
+    <div class="card-bg"></div> 
         <div class="card-content">
  <h3>Pizza</h3>
- <p>Small ---20000@</p>
- <p>Medium ---30000@</p>
- <p>Large ---45000@</p>
+ <ul class="cake-prices">
+  <li>Small  — 20,000@</li>
+  <li>Medium — 30,000@</li>
+  <li>Large  — 45,000@</li>
+ </ul>
  <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20want%20to%20order%20a%20Bento%20Cake.%0AImage:%20https://yourwebsite.com/images/bento.jpg"
    target="_blank">
    Order Now
@@ -400,10 +437,13 @@ footer{
  </div>
  
  <div class="card cookies">
+    <div class="card-bg"></div> 
         <div class="card-content">
  <h3>Cookies</h3>
- <p>Pack of Six(Iced) ---5000</p>
- <p>Pack of Six (plain) ---3000</p>
+ <ul class="cake-prices">
+  <li>Pack of Six(Iced)   — 5,000@</li>
+  <li>Pack of Six (plain) — 3,000@</li>
+ </ul>
  <h4>Get Free Delivery For 50 Pieces and Above</h4>
  <a href="https://wa.me/256780500182?text=Hello%20KMJ%20Pastries%2C%20I%20want%20to%20order%20a%20Bento%20Cake.%0AImage:%20https://yourwebsite.com/images/bento.jpg"
    target="_blank">
